# libcouplet

./: Makefile.am  README.markdown  configure.ac  couplet.h  libcouplet.pc.in
examples/: active.c  basic.c  bot.c  roster.c
include/libcouplet/: couplet.h  coupletpp.h  parser.h
src/: auth.c  common.h  conn.c  ctx.c  event.c  handler.c  hash.c  hmac.c  hmac.h  jid.c  list.c  list.h  oocontext.cpp  oostanza.cpp  parser.h  parser_expat.c  parser_libxml2.c  sasl.c  sasl.h  scram.c  scram.h  sha1.c  sha1.h  sock.c  stanza.c  thread.c  thread.h  tls_schannel.c  util.c  util.h
tests/: check_parser.c  test_base64.c  test_ctx.c  test_hash.c  test_jid.c  test_sasl.c
